k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ojat-production
  labels:
    name: ojat-production
    environment: production
